--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 git+https://github.com/wbaek/theconf@de32022f8c0651a043dc812d17194cdfd62066e8
 git+https://github.com/ildoonet/pytorch-gradual-warmup-lr.git@08f7d5e
-git+https://github.com/ildoonet/pystopwatch2.git
-git+https://github.com/hyperopt/hyperopt.git
+# git+https://github.com/ildoonet/pystopwatch2.git
+pystopwatch2
+# git+https://github.com/hyperopt/hyperopt.git
+hyperopt
 
-pretrainedmodels
-tqdm
-tensorboardx
-sklearn
-ray
+git+https://github.com/jraman/fast-autoaugment.git@ray
+
+gorilla
 matplotlib
+pretrainedmodels
 psutil
+ray
 requests
+sklearn
+tensorboardx
+tqdm
+warmup_scheduler
